sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:6: error: illegal start of simple pattern
    for(var i = 0; i < tab.length - 2; i++){
        ^AlgBubbleSort1:6: error: '<-' expected but ';' found.
    for(var i = 0; i < tab.length - 2; i++){
                 ^AlgBubbleSort1:6: error: '<-' expected but ';' found.
    for(var i = 0; i < tab.length - 2; i++){
                                     ^AlgBubbleSort1:6: error: illegal start of simple pattern
    for(var i = 0; i < tab.length - 2; i++){
                                          ^AlgBubbleSort1:14: error: illegal start of simple expression
  }while(tab_has_changed);
  ^